[package]
name = "voice"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-channel = "1.8.0"
discortp = { version = "0.5.0", features = ["discord-full"] }
futures-util = "0.3.28"
opus = "0.3.0"
rand = { version = "0.8.5" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
spin_sleep = "1.1.1"
tokio = { version = "1.27.0", features = ["rt", "sync", "net", "time", "macros"] }
tokio-tungstenite = { version = "0.19.0", features = ["tokio-native-tls", "native-tls"] }
tracing = "0.1.37"
xsalsa20poly1305 = { version = "0.9.0", default-features = false }
utils = { path = "../utils" }
ringbuf = "0.3.3"
flume = "0.10.14"
