[package]
name = "worker"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = "1.0.71"
async-channel = "1.8.0"
async-trait = "0.1.68"
byteorder = "1.4.3"
futures-util = "0.3.28"
reqwest = "0.11.16"
rubato = "0.12.0"
serde = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.19"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twilight-cache-inmemory = "0.15.1"
twilight-mention = "0.15.1"
twilight-model = "0.15.1"
twilight-standby = "0.15.1"

[dependencies.simd-json]
version = "0.6.0"
features = ["allow-non-simd"]
optional = false

[dependencies.symphonia]
version = "0.5.2"
features = ["all"]
optional = false

[dependencies.tokio]
version = "1.27.0"
features = ["rt", "fs", "rt-multi-thread", "parking_lot", "io-util", "signal", "net", "macros", "process", "io-std", "sync", "time"]
optional = false
default-features = false

[dependencies.tokio-tungstenite]
version = "0.18.0"
features = ["tokio-rustls"]
optional = false

[dependencies.tracing-tracy]
version = "0.10.2"
features = ["system-tracing", "broadcast", "context-switch-tracing", "code-transfer"]
optional = false
default-features = false

[dependencies.twilight-gateway]
version = "0.15.1"
features = ["simd-json"]
optional = false

[dependencies.twilight-http]
version = "0.15.1"
features = ["simd-json"]
optional = false

[dependencies.twilight-util]
version = "0.15.1"
features = ["full"]
optional = false

[dependencies.voice]
path = "../voice"
features = []
optional = false
