[package]
name = "worker"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = "1.0.71"
async-channel = "1.8.0"
async-trait = "0.1.68"
byteorder = "1.4.3"
futures-util = "0.3.28"
reqwest = { version = "0.11.16", features = ["stream", "blocking"] }
rubato = "0.12.0"
serde = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.19"
thiserror = "1.0.40"
tokio-util = { version = "0.7.8", features = ["io", "io-util"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twilight-cache-inmemory = "0.15.1"
twilight-gateway = { version = "0.15.1", features = ["simd-json"] }
twilight-http = { version = "0.15.1", features = ["simd-json"] }
twilight-mention = "0.15.1"
twilight-model = "0.15.1"
twilight-standby = "0.15.1"
twilight-util = { version = "0.15.1", features = ["full"] }
simd-json = { version = "0.6.0", features = ["allow-non-simd"] }
symphonia = { version = "0.5.2", features = ["all"] }
tokio = { version = "1.27.0", features = ["rt", "fs", "rt-multi-thread", "parking_lot", "io-util", "signal", "net", "macros", "process", "io-std", "sync", "time"] }
tracing-tracy = { version = "0.10.2" }
voice = { path = "../voice" }
flume = "0.10.14"
ringbuf = "0.3.3"
pin-project = "1.1.0"
