[package]
name = "worker"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-channel = "1.8.0"
async-trait = "0.1.68"
byteorder = "1.4.3"
futures-util = "0.3.28"
rubato = "0.12.0"
serde = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9.19"
thiserror = "1.0.40"
tokio-util = { version = "0.7.8", features = ["io", "io-util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { version = "1.27.0", features = ["rt", "fs", "rt-multi-thread", "parking_lot", "io-util", "signal", "net", "macros", "process", "io-std", "sync", "time"] }
tracing-tracy = { version = "0.10.2" }
voice = { path = "../voice" }
flume = "0.10.14"
ringbuf = "0.3.3"
pin-project = "1.1.0"
decoder = { path = "../decoder" }
debug-ignore = "1.0.5"
reqwest = { version = "0.11.20", features = ["json"] }
regex = "1.9.5"
serenity = { version = "0.12.0", features = ["collector", "voice"] }
poise = { git = "https://github.com/serenity-rs/poise", rev = "v0.6.0" }
futures-channel = "0.3.29"
